--- a/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
@@ -22,13 +22,16 @@
             </goals>
             <configuration>
               <implementation>macos</implementation>
+              <classNames>
+                <className>org.opennms.protocols.icmp.IcmpSocket</className>
+              </classNames>
             </configuration>
           </execution>
         </executions>
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -Wall -Werror -O -D__DARWIN__ ${build.jni.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O -D${platform.define} ${build.jni.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
@@ -39,10 +42,10 @@
             </source>
           </sources>
           <linkerStartOptions>
-            <linkerStartOption>-prebind -dynamiclib ${build.jni.compiler.arg} ${build.jni.linker.arg} -lc -ldl</linkerStartOption>
+            <linkerStartOption>-dynamiclib ${build.jni.compiler.arg} ${build.jni.linker.arg} -lc -ldl</linkerStartOption>
           </linkerStartOptions>
-          <javahOS>macosx</javahOS>
-          <jdkIncludePath>${java.home}/include</jdkIncludePath>
+          <javahOS>${platform.javahOS}</javahOS>
+          <jdkIncludePath>${platform.jdk.include.dir}</jdkIncludePath>
         </configuration>
       </plugin>
     </plugins>
