--- a/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-linux/pom.xml
+++ b/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-linux/pom.xml
@@ -20,12 +20,17 @@
             <goals>
               <goal>javah</goal>
             </goals>
+            <configuration>
+              <classNames>
+                <className>org.opennms.netmgt.rrd.rrdtool.Interface</className>
+              </classNames>
+            </configuration>
           </execution>
         </executions>
         <configuration>
           <compilerProvider>generic</compilerProvider>
           <compilerStartOptions>
-            <compilerStartOption>-fPIC -Wall -Werror -O -D__LINUX__ ${build.jni.compiler.arg}</compilerStartOption>
+            <compilerStartOption>-fPIC -Wall -Werror -O -D${platform.define} ${build.jni.compiler.arg}</compilerStartOption>
           </compilerStartOptions>
           <sources>
             <source>
@@ -41,7 +46,8 @@
           <linkerStartOptions>
             <linkerStartOption>-shared ${build.jni.compiler.arg} ${build.jni.linker.arg} -L${build.rrd.lib.dir} -lrrd -lc -ldl</linkerStartOption>
           </linkerStartOptions>
-          <javahOS>linux</javahOS>
+          <javahOS>${platform.javahOS}</javahOS>
+          <jdkIncludePath>${platform.jdk.include.dir}</jdkIncludePath>
         </configuration>
       </plugin>
     </plugins>
