Added notes about XMPP debug and user names.

--- a/opennms-daemon/src/main/filtered/etc/xmpp-configuration.properties
+++ b/opennms-daemon/src/main/filtered/etc/xmpp-configuration.properties
@@ -17,11 +17,13 @@
 #xmpp.TLSEnabled = false
 #xmpp.selfSignedCertificateEnabled = false
 #xmpp.truststorePassword = changeit
+# Note, never turn this on.
 #xmpp.debuggerEnabled = false
 
 # These properties define the account information that should be used to connect
 # to the xmpp.server defined above.
 
+# Just put the username here, not username@server
 #xmpp.user   =
 #xmpp.pass   =
 
