add NetApp filer metrics

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -69,6 +69,9 @@ juniper.bufferPoolUtil, juniper.cpu, juniper.temp, \
 mge.ambtemp, mge.ambhumid, mge.current, mge.level, mge.temp, mge.time, mge.voltage, \
 microsoft.cpuPercentBusy, microsoft.hrDisk2, microsoft.hrDisk3, microsoft.hrDisk4, microsoft.memory, \
 netapp.cpu, netapp.fspercent, netapp.fsfiles, \
+netapp.servercall, netapp.cifsrw, netapp.nfsv2rw, netapp.nfsv3rw, \
+netapp.fspercentkbyte, netapp.fskbyte, \
+netapp.fspercentinode, netapp.fsinode, netapp.fsfile, \
 netsnmp.context, \
 netsnmp.disk1, netsnmp.disk1percent, netsnmp.disk2, netsnmp.disk2percent, \
 netsnmp.disk3, netsnmp.disk3percent, netsnmp.disk4, netsnmp.disk4percent, netsnmp.disk5, netsnmp.disk5percent, \
@@ -2049,11 +2052,11 @@ report.netapp.cpu.type=node
 report.netapp.cpu.command=--title="Network Appliance CPU Use" \
  DEF:cpubusy={rrd1}:cpuBusyTimePct:AVERAGE \
  DEF:cpuidle={rrd2}:cpuIdleTimePct:AVERAGE \
- LINE2:cpubusy#000000:"Busy" \
+ AREA:cpubusy#ff0000:"Busy" \
  GPRINT:cpubusy:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:cpubusy:MIN:"Min \\: %10.2lf %s" \
  GPRINT:cpubusy:MAX:"Max \\: %10.2lf %s\\n" \
- LINE2:cpuidle#54a4de:"Idle" \
+ STACK:cpuidle#00ff00:"Idle" \
  GPRINT:cpuidle:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:cpuidle:MIN:"Min \\: %10.2lf %s" \
  GPRINT:cpuidle:MAX:"Max \\: %10.2lf %s\\n"
@@ -2073,7 +2076,7 @@ report.netapp.fsfiles.command=--title="Network Appliance Filesystem Max Files" \
  GPRINT:avail:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:avail:MIN:"Min \\: %10.2lf %s" \
  GPRINT:avail:MAX:"Max \\: %10.2lf %s\\n" \
- LINE2:used#cc0000:"Used" \
+ LINE2:used#cc0000:"Used " \
  GPRINT:used:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:used:MIN:"Min \\: %10.2lf %s" \
  GPRINT:used:MAX:"Max \\: %10.2lf %s\\n"
@@ -2084,7 +2087,7 @@ report.netapp.fspercent.type=node
 report.netapp.fspercent.command=--title="Network Appliance Filesystem Max Space/Inodes" \
  DEF:space={rrd1}:fsMaxUsedBytesPct:AVERAGE \
  DEF:inodes={rrd2}:fsMaxUsedInodesPct:AVERAGE \
- LINE2:space#000000:"Space" \
+ LINE2:space#000000:"Space " \
  GPRINT:space:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:space:MIN:"Min \\: %10.2lf %s" \
  GPRINT:space:MAX:"Max \\: %10.2lf %s\\n" \
@@ -2092,6 +2095,147 @@ report.netapp.fspercent.command=--title="Network Appliance Filesystem Max Space/
  GPRINT:inodes:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:inodes:MIN:"Min \\: %10.2lf %s" \
  GPRINT:inodes:MAX:"Max \\: %10.2lf %s\\n"
+
+report.netapp.servercall.name=NetApp Server Calls
+report.netapp.servercall.columns=naMiscLowNfsOps, naMiscLowCifsOps
+report.netapp.servercall.type=node
+report.netapp.servercall.command=--title="NetApp Server Calls" \
+ --vertical-label operations \
+ DEF:naMiscLowNfsOps={rrd1}:naMiscLowNfsOps:AVERAGE \
+ DEF:naMiscLowCifsOps={rrd2}:naMiscLowCifsOps:AVERAGE \
+ LINE1:naMiscLowNfsOps#0000ff:"NFS " \
+ GPRINT:naMiscLowNfsOps:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:naMiscLowNfsOps:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naMiscLowNfsOps:MAX:"Max \\: %8.2lf %s\\n" \
+ LINE1:naMiscLowCifsOps#00ff00:"CIFS" \
+ GPRINT:naMiscLowCifsOps:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:naMiscLowCifsOps:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naMiscLowCifsOps:MAX:"Max \\: %8.2lf %s\\n"
+
+report.netapp.cifsrw.name=NetApp CIFS rw
+report.netapp.cifsrw.columns=naCifsReads, naCifsWrites
+report.netapp.cifsrw.type=node
+report.netapp.cifsrw.command=--title="NetApp CIFS Read/Write" \
+ --vertical-label operations \
+ DEF:naCifsReads={rrd1}:naCifsReads:AVERAGE \
+ DEF:naCifsWrites={rrd2}:naCifsWrites:AVERAGE \
+ LINE1:naCifsReads#0000ff:"CIFS reads " \
+ GPRINT:naCifsReads:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naCifsReads:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naCifsReads:MAX:"Max \\: %8.2lf %s\\n" \
+ LINE1:naCifsWrites#ff0000:"CIFS writes" \
+ GPRINT:naCifsWrites:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:naCifsWrites:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naCifsWrites:MAX:"Max \\: %8.2lf %s\\n"
+
+report.netapp.nfsv2rw.name=Network Appliance NFS v2 rw
+report.netapp.nfsv2rw.columns=naV2cReads, naV2cWrcaches, naV2cWrites
+report.netapp.nfsv2rw.type=node
+report.netapp.nfsv2rw.command=--title="NetApp NFS v2 Read/Write" \
+ --vertical-label operations \
+ DEF:naV2cReads={rrd1}:naV2cReads:AVERAGE \
+ DEF:naV2cWrcaches={rrd2}:naV2cWrcaches:AVERAGE \
+ DEF:naV2cWrites={rrd3}:naV2cWrites:AVERAGE \
+ LINE1:naV2cReads#0000ff:"NFS v2 reads       " \
+ GPRINT:naV2cReads:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naV2cReads:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naV2cReads:MAX:"Max \\: %8.2lf %s\\n" \
+ LINE1:naV2cWrcaches#00ff00:"NFS v2 cache writes" \
+ GPRINT:naV2cWrcaches:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naV2cWrcaches:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naV2cWrcaches:MAX:"Max \\: %8.2lf %s\\n" \
+ LINE1:naV2cWrites#ff0000:"NFS v2 writes      " \
+ GPRINT:naV2cWrites:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naV2cWrites:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naV2cWrcaches:MAX:"Max \\: %8.2lf %s\\n"
+
+report.netapp.nfsv3rw.name=Network Appliance NFS v3 rw
+report.netapp.nfsv3rw.columns=naV3cReads, naV3cWrites
+report.netapp.nfsv3rw.type=node
+report.netapp.nfsv3rw.command=--title="NetApp NFS v3 Read/Write" \
+ --vertical-label operations \
+ DEF:naV3cReads={rrd1}:naV3cReads:AVERAGE \
+ DEF:naV3cWrites={rrd2}:naV3cWrites:AVERAGE \
+ LINE1:naV3cReads#0000ff:"NFS v3 reads " \
+ GPRINT:naV3cReads:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naV3cReads:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naV3cReads:MAX:"Max \\: %8.2lf %s\\n" \
+ LINE1:naV3cWrites#ff0000:"NFS v3 writes" \
+ GPRINT:naV3cWrites:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naV3cWrites:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naV3cWrites:MAX:"Max \\: %8.2lf %s\\n"
+
+report.netapp.fspercentkbyte.name=Netapp dfEntry Filesystem percent usage
+report.netapp.fspercentkbyte.columns=naDfPctKB
+report.netapp.fspercentkbyte.type=naDfIndex
+report.netapp.fspercentkbyte.propertiesValues=naDfFileSys
+report.netapp.fspercentkbyte.command=--title="NetApp {naDfFileSys} percent usage" \
+ --lower-limit 0 --upper-limit 100 --rigid \
+ DEF:naDfPctKB={rrd1}:naDfPctKB:AVERAGE \
+ LINE2:naDfPctKB#0000ff:"percent" \
+ GPRINT:naDfPctKB:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:naDfPctKB:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:naDfPctKB:MAX:"Max \\: %8.2lf %s\\n" 
+
+report.netapp.fskbyte.name=Netapp dfEntry Filesystem usage 
+report.netapp.fskbyte.columns=naDfLowUsedKB, naDfLowFreeKB
+report.netapp.fskbyte.type=naDfIndex
+report.netapp.fskbyte.propertiesValues=naDfFileSys
+report.netapp.fskbyte.command=--title="NetApp {naDfFileSys} usage" \
+ DEF:usedKB={rrd1}:naDfLowUsedKB:AVERAGE \
+ DEF:freeKB={rrd2}:naDfLowFreeKB:AVERAGE \
+ AREA:usedKB#ff0000:"Used" \
+ GPRINT:usedKB:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:usedKB:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:usedKB:MAX:"Max \\: %8.2lf %s\\n" \
+ STACK:freeKB#00ff00:"Free" \
+ GPRINT:freeKB:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:freeKB:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:freeKB:MAX:"Max \\: %8.2lf %s\\n" 
+
+report.netapp.fspercentinode.name=Netapp dfEntry Filesystem percent inodes 
+report.netapp.fspercentinode.columns=naDfInodePct
+report.netapp.fspercentinode.type=naDfIndex
+report.netapp.fspercentinode.propertiesValues=naDfFileSys
+report.netapp.fspercentinode.command=--title="NetApp {naDfFileSys} percent inodes" \
+ --lower-limit 0 --upper-limit 100 --rigid \
+ DEF:pctInode={rrd1}:naDfInodePct:AVERAGE \
+ LINE2:pctInode#0000ff:"percent" \
+ GPRINT:pctInode:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:pctInode:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:pctInode:MAX:"Max \\: %8.2lf %s\\n" 
+
+report.netapp.fsinode.name=Netapp dfEntry Filesystem inodes
+report.netapp.fsinode.columns=naDfInodeUsed, naDfInodeFree
+report.netapp.fsinode.type=naDfIndex
+report.netapp.fsinode.propertiesValues=naDfFileSys
+report.netapp.fsinode.command=--title="NetApp {naDfFileSys} inodes" \
+ DEF:usedInode={rrd1}:naDfInodeUsed:AVERAGE \
+ DEF:freeInode={rrd2}:naDfInodeFree:AVERAGE \
+ AREA:usedInode#ff0000:"Used" \
+ GPRINT:usedInode:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:usedInode:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:usedInode:MAX:"Max \\: %8.2lf %s\\n" \
+ STACK:freeInode#00ff00:"Free" \
+ GPRINT:freeInode:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:freeInode:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:freeInode:MAX:"Max \\: %8.2lf %s\\n"
+
+report.netapp.fsfile.name=Netapp dfEntry Filesystem files
+report.netapp.fsfile.columns=naDfMaxFileUsed,naDfMaxFileAvail
+report.netapp.fsfile.type=naDfIndex
+report.netapp.fsfile.propertiesValues=naDfFileSys
+report.netapp.fsfile.command=--title="NetApp {naDfFileSys} files" \
+ DEF:usedFiles={rrd1}:naDfMaxFileUsed:AVERAGE \
+ DEF:maxAvailFiles={rrd2}:naDfMaxFileAvail:AVERAGE \
+ LINE2:usedFiles#ff0000:"Used" \
+ GPRINT:usedFiles:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:usedFiles:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:usedFiles:MAX:"Max \\: %8.2lf %s\\n" \
+ LINE2:maxAvailFiles#000000:"Max " \
+ GPRINT:maxAvailFiles:AVERAGE:" Avg \\: %8.2lf %s" \
+ GPRINT:maxAvailFiles:MIN:"Min \\: %8.2lf %s" \
+ GPRINT:maxAvailFiles:MAX:"Max \\: %8.2lf %s\\n"
 
 ######
 ###### Reports Generated from NET-SNMP agents
