Make AbstractTransactionalTemporaryDatabaseSpringContextTests work if applicationContext-dao.xml isn't loaded (added another applicationContext to set a transactionManager that can be overridden.  Also set the default for mock.rundbtests=true.  If you want to run tests but want to ignore these tests, set mock.rundbtests=false.  Reviewed by brozow.

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
         <artifactId>native-maven-plugin</artifactId>
         <version>1.0-alpha-1</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.3-SNAPSHOT</version>
+      </plugin>
     </plugins>
   </pluginManagement>
    <plugins>
@@ -403,7 +408,7 @@ opennms.home = ${opennms.home}
     <!-- turn down the default DEBUG logLevel. Override on the command line if you want -->
     <mock.logLevel>WARN</mock.logLevel>
     <mock.debug>false</mock.debug>
-    <mock.rundbtests>false</mock.rundbtests>
+    <mock.rundbtests>true</mock.rundbtests>
     <mock.runSnmpTests>false</mock.runSnmpTests>
     <mock.snmpHost>localhost</mock.snmpHost>
     <install.version>${project.version}</install.version>
