--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -25,8 +25,16 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-dao</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <!-- FIXME: This shouldn't be in here... should be using only
+         opennms-snmp-api -->
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>opennms-joesnmp</artifactId>
-      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
