--- a/pom.xml
+++ b/pom.xml
@@ -112,11 +112,6 @@
         <artifactId>native-maven-plugin</artifactId>
         <version>1.0-alpha-1</version>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.2</version>
-      </plugin>
     </plugins>
   </pluginManagement>
    <plugins>
@@ -477,6 +472,20 @@ opennms.home = ${opennms.home}
   </properties>
 
   <profiles>
+    <profile>
+      <id>eclipse-snapshot</id>
+      <build>
+       <pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-eclipse-plugin</artifactId>
+            <version>2.3-SNAPSHOT</version>
+          </plugin>
+        </plugins>
+       </pluginManagement>
+      </build>
+    </profile>
     <profile>
       <id>Mac OS X</id>
       
