check in work so we can pair

--- a/opennms-correlator/pom.xml
+++ b/opennms-correlator/pom.xml
@@ -97,5 +97,10 @@
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
     </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
