--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@ to the depends list in the platform.check target).
   <target name="java.check">
     <condition property="java.versionokay">
       <or>
+        <!-- Don't forget to update the <fail> message below -->
         <contains string="${java.vm.version}" substring="1.5."/>
         <contains string="${java.vm.version}" substring="1.6."/>
       </or>
@@ -24,7 +25,7 @@ to the depends list in the platform.check target).
     <fail unless="java.versionokay">
 Your Java version (${java.vm.version}) is not supported.  The
 build system is currently designed and tested to work with Java
-versions 1.4 and 1.5.  You can try to work around this error by
+versions 1.5 and 1.6.  You can try to work around this error by
 modifying the java.check target in the build.xml file.
     </fail>
   </target>
