--- a/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?><project>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>opennms-icmp-jni</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>1.3.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-icmp-jni-macosx</artifactId>
